--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>TESTE 2</title>
+    <title>TESTE</title>
 </head>
 <body>
     <header>
